A pagina das avaliação das intervenções já cadastra mas ainda devo estudar alguns pontos

--- a/SAEW/src/main/webapp/css/intervecoeslia.css
+++ b/SAEW/src/main/webapp/css/intervecoeslia.css
@@ -410,6 +410,7 @@ button:hover{
 
 .text-internacao{
 	margin-right:10px;
+	width:165px;
 }
 
 .text-internacao input{
@@ -440,6 +441,7 @@ button:hover{
 
 .text-nascimento{
 	margin-right:10px;
+	width:165px;
 }
 
 .text-nasc input, .text-nascimento input{
