--- a/SAEW/src/main/webapp/css/intervecoeslia.css
+++ b/SAEW/src/main/webapp/css/intervecoeslia.css
@@ -6,7 +6,7 @@
     list-style: none;
     text-decoration: none;
     overflow-x: hidden;
-    font-family: OpenSans,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,sans-serif;
+    font-family: Poppins,sans-serif;
     box-sizing: border-box;
 }
 
@@ -78,7 +78,7 @@ body{
 .avaliacao-cont{
 	width:60%;
 	height:600px;
-	background-color:#ffffff;
+	background-color:#fcfcfc;;
 	padding:10px;
 	
 	display:flex;
@@ -301,12 +301,12 @@ button:hover{
 }
 
 .esq{
-	padding-left:40px;
+	padding-left:20px;
 }
 
 /**/
 .observacao{
-	padding:20px 0px;
+	padding-top:10px;
 }
 
 .observacao .t-area{
@@ -317,13 +317,14 @@ button:hover{
 }
 
 .observacao .t-area textarea{
-	height:95px;
+	height:75px;
+	width:280px;
 	padding:10px;
 	outline:none;
 }
 
 .legenda-cont{
-	padding-top:20px;
+	padding-top:5px;
 }
 
 .legenda{
@@ -343,13 +344,15 @@ button:hover{
 }
 
 .leg-02{
+	display:flex;
+	flex-direction:row;
 	margin-bottom:5px;
 }
 
 /*PACIENTE*/
 .paciente{
 	width:25%;
-	background-color:#ffffff;
+	background-color:#fcfcfc;
 	margin-left:20px;
 	padding:15px;
 }
@@ -386,7 +389,7 @@ button:hover{
 	width:100%;
 	outline:none;
 	padding:2px;
-	font-size:14px;
+	font-size:16px;
 }
 
 
