--- a/SAEW/src/main/webapp/css/avaliacao.css
+++ b/SAEW/src/main/webapp/css/avaliacao.css
@@ -6,7 +6,8 @@
     list-style: none;
     text-decoration: none;
     overflow-x: hidden;
-    font-family: OpenSans,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,sans-serif;
+    font-family: Poppins;
+    /*font-size:14.5px;*/
     box-sizing: border-box;
 }
 
@@ -56,6 +57,7 @@ body{
 	display:flex;
 	flex-direction:row;
 	padding:20px 50px;
+	font-size:14.7px;
 }
 
 /*AVALIACAO-HEAD*/
@@ -79,7 +81,7 @@ body{
 .avaliacao-cont{
 	width:60%;
 	height:600px;
-	background-color:#ffffff;
+	background-color:#fcfcfc;
 	padding:0px; /*padding:0px;*/
 	
 	display:flex;
@@ -220,6 +222,7 @@ body{
 .btn-tabe{
 	display:flex;
 	border-bottom:1px solid #c9c9c9;
+	font-weight:400;
 }
 
 .btn-tabe button{
@@ -254,12 +257,12 @@ body{
 
 .dir-cont{
 	border:1px solid #c9c9c9;
-	padding:15px;
+	padding:10px 15px;
 }
 
 .dir-cont-02{
 	border:1px solid #c9c9c9;
-	padding:15px;
+	padding:10px 15px 13px 15px;
 	margin-top:15px;
 }
 
@@ -267,7 +270,7 @@ body{
 /*DADOS DO PACIENTE*/
 .paciente{
 	width:25%;
-	background-color:#ffffff;
+	background-color:#fcfcfc;
 	margin-left:20px;
 	padding:15px;
 }
@@ -328,6 +331,7 @@ body{
 
 .text-internacao{
 	margin-right:10px;
+	width:165px;
 }
 
 .text-internacao input{
@@ -358,6 +362,7 @@ body{
 
 .text-nascimento{
 	margin-right:10px;
+	width:165px;
 }
 
 .text-nasc input, .text-nascimento input{
@@ -367,8 +372,8 @@ body{
 	font-size:14px;
 }
 
-.codito, .input-paciente, .interna, .nascimento, .perido{
-	margin-bottom:4px;
+.codito, .input-paciente, .interna, .nascimento, .perido, .input-codigo-enfermeiro{
+	margin-bottom:5px;
 }
 
 /*COMBOBOX GERAL*/
@@ -472,3 +477,6 @@ body{
 	margin-right:25px;
 }
 
+.input-codigo-enfermeiro input{
+	width:115px;
+}
